# kalx

./: .env.example  .gitignore  Cargo.toml  README.md
config/: kalx.example.toml
docs/: architecture.md  command-map.md  kalshi-auth.md  logging.md  safety.md
src/: cli.rs  config.rs  error.rs  kalshi.rs  lib.rs  logging.rs  main.rs  output.rs
src/kalshi/: auth.rs  mod.rs  models.rs  rest.rs  ws.rs
tests/: rest_mock.rs
