[package]
name = "kalx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
comfy-table = "7.2.2"
directories = "6.0.0"
dotenvy = "0.15.7"
futures-util = "0.3.32"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "query", "rustls"] }
rsa = { version = "0.9.10", features = ["pem"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = { version = "0.10.9", features = ["oid"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
toml = "0.9.8"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json", "time"] }
